--- a/.chezmoidata/utilities.yaml
+++ b/.chezmoidata/utilities.yaml
@@ -5,6 +5,7 @@ utilities:
     - "eza"
     - "zoxide"
     - "btop"
+    - "resources"
     - "fd"
     - "ripgrep"
     - "fzf"
@@ -16,5 +17,6 @@ utilities:
     - "ncdu"
     - "gparted"
     - "protonup-qt"
+    - "easyeffects"
     # - "fancontrol-gui"
     # - "openrgb"
