--- a/dot_config/hypr/conf/keybindings.conf
+++ b/dot_config/hypr/conf/keybindings.conf
@@ -7,10 +7,13 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, F, togglefloating,
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, D, exec, vesktop
+bind = $mainMod, G, exec, steam
 bind = $mainMod, space, exec, $menu
+bind = $mainMod, Q, killactive,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, C, exec, cliphist list | rofi -dmenu -i | cliphist decode | wl-copy
