--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -10,7 +10,8 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = sleep 1 && ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
 exec-once = hyprctl setcursor BreezeX-RosePineDawn-Linux 30
-exec-once = syshud -p 'top-right' -i 24
+exec-once = syshud -p 'bottom-center' -i 24
+exec-once = wlsunset -l 51.9 -L 4.5
 # exec-once = sleep 1 && hyprpm enable Hyprspace
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'rose-pine-gtk'
