--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -14,6 +14,7 @@ windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
 windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
+windowrulev2 = opacity 0.80 0.70,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Weather)$
@@ -28,7 +29,7 @@ windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(zen-alpha)$,title:^(Library)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(nwg-look)$
-windowrulev2 = float,class:^(pavucontrol)$
+windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = float,class:^(org.gnome.Calculator)$
 windowrulev2 = float,class:^(org.gnome.Calendar)$
 windowrulev2 = float,class:^(org.gnome.Weather)$
@@ -43,6 +44,7 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 layerrule = blur,waybar
+layerrule = ignorezero,waybar
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 # layerrule = noanim,rofi
