--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -30,6 +30,7 @@ set -g escape-time 0
 set -g status-style "bg=#{@thm_bg}"
 set -g status-justify "absolute-centre"
 # set -g detach-on-destroy off
+set -g allow-passthrough on
 
 # Pane border look and feel
 setw -g pane-border-status bottom
