--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -23,7 +23,12 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.polkit-gnome-authentication-a
 windowrulev2 = opacity 1 1,class:^(zen-alpha)$,title:^(.*Zen Browser Private Browsing*.)$
 windowrulev2 = opacity 1 1,class:^(firefox)$,title:^(.*Mozilla Firefox Private Browsing*.)$
 
+windowrulev2 = float,title:^(Neofetch)$
+windowrulev2 = size 600 400,title:^(Neofetch)$
+windowrulev2 = move 2% 6%,title:^(Neofetch)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
+windowrulev2 = pin,title:^(Picture-in-Picture)$
+windowrulev2 = move 1698 950,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Friends List)$
 windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(zen-alpha)$,title:^(Library)$
