--- a/.chezmoidata/theme.yaml
+++ b/.chezmoidata/theme.yaml
@@ -4,7 +4,7 @@ theme:
     - "qt5ct"
     - "qt6ct"
     - "rose-pine-cursor"
-    - "rose-pine-gtk-theme-full"
+    # - "rose-pine-gtk-theme-full"
     - "sddm-theme-tokyo-night-git"
     - "noto-fonts"
     - "noto-fonts-cjk"
