--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -14,6 +14,7 @@ windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
 windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
+windowrulev2 = opacity 0.80 0.70,class:^(Spotify)$
 windowrulev2 = opacity 0.80 0.70,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
