--- a/.chezmoidata/environment.yaml
+++ b/.chezmoidata/environment.yaml
@@ -19,10 +19,15 @@ environment:
     - "rofi-wayland"
     - "cliphist"
     - "gvfs"
-    # - "nautilus"
     - "thunar"
+    - "ffmpegthumbnailer"
+    - "p7zip"
+    - "poppler"
+    - "yazi"
     - "eog"
     - "wlogout"
     - "gnome-calendar"
     - "gnome-weather"
     - "wlsunset"
+    - "hyprpicker"
+    - "grimblast-git"
