--- a/dot_config/hypr/conf/my-programs.conf
+++ b/dot_config/hypr/conf/my-programs.conf
@@ -4,6 +4,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = kitty --title Kitty
-$fileManager = thunar
+$fileManager = kitty sh -c 'yazi'
 $menu = rofi -show drun
 $browser = zen-browser
+$resources = kitty sh -c 'btop'
+$notifs = swaync-client -t -sw
