--- a/dot_config/hypr/conf/keybindings.conf
+++ b/dot_config/hypr/conf/keybindings.conf
@@ -9,16 +9,23 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, R, exec, $resources
+bind = $mainMod, N, exec, $notifs
 bind = $mainMod, D, exec, vesktop
 bind = $mainMod, G, exec, steam
+bind = $mainMod, M, exec, spotify
 bind = $mainMod, space, exec, $menu
+bind = $mainMod, P, exec, grimblast --notify copysave area
+bind = $mainMod SHIFT, P, exec, grimblast --notify copysave output
+bind = $mainMod CONTROL, P, exec, hyprpicker --autocopy
+bind = $mainMod, I, exec, kitty --title 'Neofetch' --hold sh -c 'fastfetch'
+
 bind = $mainMod, Q, killactive,
 bind = $mainMod, F, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
+bind = $mainMod SHIFT, S, pseudo, # dwindle
 bind = $mainMod, C, exec, cliphist list | rofi -dmenu -i | cliphist decode | wl-copy
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400
-# bind = $mainMod, TAB, overview:toggle all
 bind = $mainMod CONTROL, M, exit,
 bind = $mainMod CONTROL, W, exec, killall waybar || waybar
 
@@ -53,8 +60,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
