--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -14,7 +14,8 @@ windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
 windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
-windowrulev2 = opacity 0.80 0.70,class:^(Spotify)$
+windowrulev2 = opacity 0.90 0.90,class:^(Spotify)$
+windowrulev2 = opacity 0.80 0.70,class:^(thunar)$
 windowrulev2 = opacity 0.80 0.70,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
@@ -32,6 +33,7 @@ windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(zen-alpha)$,title:^(Library)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(nwg-look)$
+windowrulev2 = float,class:^(thunar)$
 windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = float,class:^(org.gnome.Calculator)$
 windowrulev2 = float,class:^(org.gnome.Calendar)$
@@ -41,6 +43,7 @@ windowrulev2 = float,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 
 windowrulev2 = size 600 400,title:^(Neofetch)$
 windowrulev2 = size 300 550,title:^(Friends List)$
+windowrulev2 = size 1024 640,class:^(thunar)$
 
 windowrulev2 = move 2% 6%,title:^(Neofetch)$
 windowrulev2 = move 1668 920,title:^(Picture-in-Picture)$
@@ -58,3 +61,9 @@ layerrule = ignorezero,waybar
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
 # layerrule = noanim,rofi
+
+workspace = 1, monitor:HDMI-A-1, persistent:true
+workspace = 2, monitor:DP-3, persistent:true
+workspace = 3, monitor:HDMI-A-1, persistent:true
+workspace = 4, monitor:DP-3, persistent:true
+workspace = 5, monitor:HDMI-A-1, persistent:true
