--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -38,6 +38,7 @@ windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = float,class:^(org.gnome.Calculator)$
 windowrulev2 = float,class:^(org.gnome.Calendar)$
 windowrulev2 = float,class:^(org.gnome.Weather)$
+windowrulev2 = float,class:^(eog)$
 windowrulev2 = float,class:^(net.nokyan.Resources)$
 windowrulev2 = float,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 
@@ -47,6 +48,8 @@ windowrulev2 = size 1024 640,class:^(thunar)$
 
 windowrulev2 = move 2% 6%,title:^(Neofetch)$
 windowrulev2 = move 1668 920,title:^(Picture-in-Picture)$
+windowrulev2 = move cursor 0 0,class:^(dragon-drop)$
+windowrulev2 = move cursor 0 0,class:^(Dragon-drop)$
 
 windowrulev2 = pin,title:^(Picture-in-Picture)$
 
