--- a/dot_config/yazi/keymap.toml
+++ b/dot_config/yazi/keymap.toml
@@ -36,3 +36,11 @@ run = '''
 	shell 'gio trash --empty' --confirm
 '''
 desc = "Empty the trash"
+
+[[manager.prepend_keymap]]
+on  = "k"
+run = "plugin --sync arrow --args=-1"
+
+[[manager.prepend_keymap]]
+on  = "j"
+run = "plugin --sync arrow --args=1"
