--- a/.chezmoidata/apps.yaml
+++ b/.chezmoidata/apps.yaml
@@ -5,4 +5,4 @@ apps:
     - "vesktop"
     - "steam"
     - "gnome-calculator"
-    - "spotify"
+    - "spotify" # might have to run gpg --recv-keys 6224F9941A8AA6D1
