--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -48,7 +48,7 @@
     },
     {
       "type": "custom",
-      "format": "github.com/joaoinez",
+      "format": "https://github.com/joaoinez",
       "outputColor": "white",
     },
     "break",
