--- a/dot_config/hypr/conf/keybindings.conf
+++ b/dot_config/hypr/conf/keybindings.conf
@@ -35,6 +35,12 @@ bind = $mainMod, J, movefocus, d
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, L, movefocus, r
 
+# Resize windows with mainMod + arrow keys
+bind = $mainMod SHIFT, H, resizeactive, -20 0
+bind = $mainMod SHIFT, J, resizeactive, 0 20
+bind = $mainMod SHIFT, K, resizeactive, 0 -20
+bind = $mainMod SHIFT, L, resizeactive, 20 0
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
