--- a/.chezmoidata/apps.yaml
+++ b/.chezmoidata/apps.yaml
@@ -6,3 +6,4 @@ apps:
     - "steam"
     - "gnome-calculator"
     - "spotify" # might have to run gpg --recv-keys 6224F9941A8AA6D1
+    - "google-chrome"
