--- a/dot_config/yazi/theme.toml
+++ b/dot_config/yazi/theme.toml
@@ -2,3 +2,7 @@
 use = "catppuccin-mocha"
 # For upcoming Yazi 0.4 (nightly version):
 dark = "catppuccin-mocha"
+[icon]
+prepend_dirs = [
+	{ name = "Trash", text = "" },
+]
