--- a/dot_config/hypr/conf/keybindings.conf
+++ b/dot_config/hypr/conf/keybindings.conf
@@ -86,7 +86,7 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bindl  = , XF86AudioMute, exec, pamixer -t
 bindel = , XF86AudioLowerVolume, exec, pamixer -d 2
 bindel = , XF86AudioRaiseVolume, exec, pamixer -i 2
-bindl  = , XF86AudioPlay, exec, playerctl play-pause
-bindl  = , XF86AudioPause, exec, playerctl play-pause
-bindl  = , XF86AudioNext, exec, playerctl next
-bindl  = , XF86AudioPrev, exec, playerctl previous
+bindl  = , XF86AudioPlay, exec, playerctl -p spotify play-pause
+bindl  = , XF86AudioPause, exec, playerctl -p spotify play-pause
+bindl  = , XF86AudioNext, exec, playerctl -p spotify next
+bindl  = , XF86AudioPrev, exec, playerctl -p spotify previous
