--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -15,6 +15,7 @@ windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 windowrulev2 = opacity 0.90 0.90,class:^(Spotify)$
+windowrulev2 = opacity 0.90 0.90,class:^(hyprland-share-picker)$
 windowrulev2 = opacity 0.80 0.70,class:^(thunar)$
 windowrulev2 = opacity 0.80 0.70,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
@@ -45,6 +46,7 @@ windowrulev2 = float,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 windowrulev2 = size 600 400,title:^(Neofetch)$
 windowrulev2 = size 300 550,title:^(Friends List)$
 windowrulev2 = size 1024 640,class:^(thunar)$
+windowrulev2 = size 500 300,class:^(hyprland-share-picker)$
 
 windowrulev2 = move 2% 6%,title:^(Neofetch)$
 windowrulev2 = move 1668 920,title:^(Picture-in-Picture)$
