--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,10 +1,10 @@
 # Colors
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
-# Change prefix to CTRL+Space
+# Change prefix to Alt+Space
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix M-Space
+bind M-Space send-prefix
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
