--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -3,6 +3,7 @@ theme = "catppuccin_trans"
 [editor]
 line-number = "relative"
 mouse = true
+bufferline = "multiple"
 
 [editor.cursor-shape]
 normal = "block"
@@ -11,3 +12,6 @@ select = "underline"
 
 [editor.file-picker]
 hidden = true
+
+[keys.normal]
+esc = ["collapse_selection", "keep_primary_selection"]
