--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -11,7 +11,7 @@
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
-windowrulev2 = opacity 0.90 0.90,class:^(zen-beta)$
+windowrulev2 = opacity 0.90 0.90,class:^(zen)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 windowrulev2 = opacity 0.90 0.90,class:^(Spotify)$
@@ -24,14 +24,14 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Weather)$
 windowrulev2 = opacity 0.80 0.70,class:^(net.nokyan.Resources)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 windowrulev2 = opacity 1 1,fullscreen: 1
-windowrulev2 = opacity 1 1,class:^(zen-beta)$,title:^(.*Zen Browser Private Browsing*.)$
+windowrulev2 = opacity 1 1,class:^(zen)$,title:^(.*Zen Browser Private Browsing*.)$
 windowrulev2 = opacity 1 1,class:^(firefox)$,title:^(.*Mozilla Firefox Private Browsing*.)$
 
 windowrulev2 = float,title:^(Neofetch)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Friends List)$
 windowrulev2 = float,title:^(Steam Settings)$
-windowrulev2 = float,class:^(zen-beta)$,title:^(Library)$
+windowrulev2 = float,class:^(zen)$,title:^(Library)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(thunar)$
