--- a/dot_config/yazi/keymap.toml
+++ b/dot_config/yazi/keymap.toml
@@ -39,8 +39,8 @@ desc = "Empty the trash"
 
 [[manager.prepend_keymap]]
 on  = "k"
-run = "plugin --sync arrow --args=-1"
+run = "plugin arrow --args=-1"
 
 [[manager.prepend_keymap]]
 on  = "j"
-run = "plugin --sync arrow --args=1"
+run = "plugin arrow --args=1"
