refactor: replace hyprland with niri

--- a/.chezmoidata/apps.yaml
+++ b/.chezmoidata/apps.yaml
@@ -1,9 +1,8 @@
 apps:
   packages:
-    - "firefox"
     - "zen-browser-bin"
     - "vesktop"
-    - "steam"
     - "gnome-calculator"
-    - "spotify" # might have to run gpg --recv-keys 6224F9941A8AA6D1
-    - "google-chrome"
+    # - "spotify" # might have to run gpg --recv-keys 6224F9941A8AA6D1
+    # - "google-chrome"
+    # - "qutebrowser"
