--- a/.chezmoidata/dev.yaml
+++ b/.chezmoidata/dev.yaml
@@ -1,21 +1,18 @@
 dev:
   packages:
     - "luarocks"
-    - "nvm"
+    - "fnm"
     - "go"
     - "github-cli"
     - "hub"
     - "kitty"
-    - "ghostty"
-    - "neovim"
+    - "neovim-nightly-bin"
     - "helix"
     - "tmux"
     - "lazygit"
     - "bruno-bin"
-    # - "docker"
-    # - "docker-compose"
-    # - "nvidia-container-toolkit"
-    - "ollama-cuda"
-    - "oterm"
+    - "docker"
+    - "docker-compose"
+    - "nvidia-container-toolkit"
     - "mockoon-bin"
-    - 'visual-studio-code-bin'
+    - "visual-studio-code-bin"
