--- a/.chezmoidata/system.yaml
+++ b/.chezmoidata/system.yaml
@@ -3,11 +3,11 @@ system:
     - "linux-zen-headers"
     - "zsh"
     - "nvidia-dkms"
-    # - "nvidia-utils"
+    - "nvidia-utils"
     - "lib32-nvidia-utils"
-    # - "libva"
+    - "libva"
     - "libva-nvidia-driver"
-    # - "egl-wayland"
+    - "egl-wayland"
     - "pacman-contrib"
     - "vi"
     - "man"
