--- a/.chezmoidata/utilities.yaml
+++ b/.chezmoidata/utilities.yaml
@@ -17,8 +17,8 @@ utilities:
     - "imagemagick"
     - "ncdu"
     - "gparted"
-    - "protonup-qt"
-    - "easyeffects"
+    # - "protonup-qt"
+    - "easyeffects-git"
     - "wget"
     - "downgrade"
     - "dragon-drop"
