feat: add iosevka font

--- a/.chezmoidata/theme.yaml
+++ b/.chezmoidata/theme.yaml
@@ -10,6 +10,6 @@ theme:
     - "noto-fonts-cjk"
     - "noto-fonts-emoji"
     - "noto-fonts-extra"
-    - "ttf-hack-nerd"
+    - "ttc-iosevka"
     - "ttf-noto-nerd"
     - "starship"
