--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # Colors
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
+set -s extended-keys on
+# set -as terminal-features 'xterm-kitty:extkeys'
+
 # Change prefix to Alt+Space
 unbind C-b
 set -g prefix M-Space
@@ -26,11 +29,9 @@ set -g set-clipboard on
 set -g default-terminal "${TERM}"
 set -g mouse on
 set -g escape-time 0
-# set -g status-position top
-set -g status-style "bg=#{@thm_bg}"
-set -g status-justify "absolute-centre"
+set -g allow-passthrough all
+set -g focus-events on
 # set -g detach-on-destroy off
-set -g allow-passthrough on
 
 # Pane border look and feel
 setw -g pane-border-status bottom
@@ -40,17 +41,19 @@ setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
 setw -g pane-border-lines single
 
 # Window look and feel
+set -g status-position bottom
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
 set -wg automatic-rename on
 set -g automatic-rename-format "Window"
 
-set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-format " #I#{?#{!=:#{window_name},Window}, #W,} "
 set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
 set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
 set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
 set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
 set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
-
-set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window}, #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
 # Restore tmux on startup
@@ -64,16 +67,19 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind S split-window -v -c "#{pane_current_path}"
-bind V split-window -h -c "#{pane_current_path}"
+bind \\ split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind T split-window -v -l 14
 
 bind C copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind -T prefix s choose-tree -s -Z -K "#{?#{e|<:#{line},9},#{e|+:#{line},1},#{?#{e|<:#{line},36},M-#{a:#{e|+:97,#{e|-:#{line},10}}},}}"
+
 # Catppuccin config
-set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
 set -g @catppuccin_pane_status_enabled "off"
@@ -83,10 +89,10 @@ set -g @catppuccin_pane_border_status "off"
 set -g @online_icon "ok"
 set -g @offline_icon "nok"
 
-# status left look and feel
+# Status left look and feel
 set -g status-left-length 100
 set -g status-left ""
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold] 󰘷 #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}] 󰘷 #S }}"
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
@@ -94,7 +100,7 @@ set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
-# status right look and feel
+# Status right look and feel
 set -g status-right-length 100
 set -g status-right ""
 set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
@@ -105,9 +111,10 @@ set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M 
 unbind R
 bind R source-file ~/.config/tmux/tmux.conf
 
-# bootstrap tpm
+# Bootstrap tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
