--- a/dot_config/kitty/private_kitty.conf
+++ b/dot_config/kitty/private_kitty.conf
@@ -1,7 +1,7 @@
 include                 themes/Catppuccin-Mocha.conf
 cursor                  #ff0017
 
-font_family             Iosevka Term
+font_family             Iosevka Nerd Font Mono
 bold_font               auto
 italic_font             auto
 bold_italic_font        auto
