fix: treesitter and iosevka packages

--- a/.chezmoidata/dev.yaml
+++ b/.chezmoidata/dev.yaml
@@ -6,6 +6,7 @@ dev:
     - "github-cli"
     - "hub"
     - "kitty"
+    - "tree-sitter-cli-git"
     - "neovim-nightly-bin"
     - "helix"
     - "tmux"
