fix: autostart service `WantedBy`

--- a/root/etc/systemd/system/autostart.service
+++ b/root/etc/systemd/system/autostart.service
@@ -8,4 +8,4 @@ Type=simple
 ExecStart=/home/astherae/.local/bin/autostart.sh
 
 [Install]
-WantedBy=default.target
+WantedBy=graphical-session.target
