--- a/root/etc/systemd/system/autostart.service
+++ b/root/etc/systemd/system/autostart.service
@@ -1,11 +1,9 @@
 [Unit]
 Description=Auto start service
-Wants=graphical-session.target
-After=graphical-session.target
 
 [Service]
 Type=simple
 ExecStart=/home/astherae/.local/bin/autostart.sh
 
 [Install]
-WantedBy=graphical-session.target
+WantedBy=default.target
