--- a/dot_config/gtk-3.0/settings.ini
+++ b/dot_config/gtk-3.0/settings.ini
@@ -2,8 +2,8 @@
 gtk-theme-name=rose-pine-gtk
 gtk-icon-theme-name=rose-pine-icons
 gtk-font-name=Noto Sans 11
-; gtk-cursor-theme-name=BreezeX-RosePineDawn-Linux
-; gtk-cursor-theme-size=30
+# gtk-cursor-theme-name=BreezeX-RosePineDawn-Linux
+# gtk-cursor-theme-size=30
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=0
